Tue Nov  4 16:51:22 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tools/Daemon/controller_i.cpp:

	  #included "ace/OS_NS_strings.h"
	
	* tools/RTComponentServer/RTConfig_Manager.h:
	* tools/ServerActivator/ServerActivator.cpp:
	* tools/XML_Helpers/Assembly_Handlers.cpp:
	* tools/XML_Helpers/RTConfig_Handlers.cpp:
	* tools/XML_Helpers/Softpkg_Handlers.cpp:
	* tools/XML_Helpers/XML_Utils.cpp:

	  #included "ace/OS_String.h" to get the above files compiling
	  with g++. We still get a link error that Don is looking at.

Tue Nov  4 16:34:45 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ciao/Active_Objref_Map.h:
	* ciao/Client_init.h:
	* ciao/Object_Set_T.h:
	* ciao/Server_init.h:

	  Added new includes that are needed to get them compiling. 

Wed Oct 29 16:39:48 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp:
        
          Removed extra generated close brace.

Wed Oct 29 15:56:33 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CCF/CCF/IDL2/Traversal/Interface.hpp:
        * CCF/CCF/IDL2/Traversal/Struct.hpp:
        
          Cosmetic changes.
          
        * CIDLC/CIDLC.vcproj:
        
          Added SizeTypeCalculator.{h,cpp} to project.
          
        * CIDLC/Literals.hpp:
        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:
        
          Fixed bugs in code generation - missing 'Consumer' appended
          to eventtype name, and event typename used for concatenation
          of operation name instead of event identifier name.
          
        * CIDLC/SizeTypeCalculator.cpp:
        
          Added support for wstrings, sequences and interfaces.
          
        * CIDLC/TypeNameEmitter.cpp:
        * CIDLC/TypeNameEmitter.hpp:
        
          Added support for typedefs, structs, sequences and interfaces.
          
        * CIDLC/cidlc.cpp:
        
          Added instantiation and launch of SizeTypeCalculator.
